# stellarforge-supplychain

./: .gitignore  Cargo.toml  README.md  deploy.ps1  deploy.sh  deploy_testnet.py  deployed_testnet_addresses.json  stellarforge-spec.md
.github/workflows/: contracts.yml
contracts/milestone_escrow/: Cargo.toml
contracts/milestone_escrow/src/: lib.rs
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs
contracts/oracle/test_snapshots/test/: test_oracle_flow.1.json
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs
contracts/vault/test_snapshots/test/: test_vault_full_flow.1.json  test_vault_init_only.1.json  test_vault_lock_only.1.json  test_vault_register_sac_only.1.json
docs/superpowers/plans/: 2026-06-30-stellarforge-implementation.md
docs/superpowers/specs/: 2026-06-30-stellarforge-design.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/upload/: route.ts
frontend/src/app/utils/: parsePortfolio.ts  stellarTx.ts
frontend/src/tests/: projects.test.js  roles.test.js  translations.test.js  ui.test.js
