[package]
name = "stellarforge-milestone-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "20.0.0"
stellarforge-vault = { path = "../vault" }
stellarforge-oracle = { path = "../oracle" }

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
stellarforge-vault = { path = "../vault", features = ["testutils"] }
stellarforge-oracle = { path = "../oracle", features = ["testutils"] }
